kubernetes/utilities/homepage/homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: utilities
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll            
    keel.sh/pollSchedule: "@every 24h"
    keel.sh/match-tag: "true"
spec:
  revisionHistoryLimit: 3
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: homepage
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          imagePullPolicy: Always
          stdin: false
          tty: false
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
            requests:
              memory: "256Mi"
              cpu: "50m"
          
          startupProbe:
            httpGet:
              path: /
              port: 3000
              httpHeaders:
                - name: Host
                  value: localhost:3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
            successThreshold: 1
          
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              httpHeaders:
                - name: Host
                  value: localhost:3000
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
          
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              httpHeaders:
                - name: Host
                  value: localhost:3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          
          volumeMounts:
            - mountPath: /app/config
              name: homepage-config
      volumes:
        - name: homepage-config
          configMap:
            name: homepage
