kubernetes/utilities/homepage/homepage-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: utilities
  labels:
    app.kubernetes.io/name: homepage
spec:
  selector:
    app.kubernetes.io/name: homepage
  ports:
  - protocol: TCP
    port: 3000
    name: http
