kubernetes/utilities/homepage/homepage-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: utilities
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.kubernetes.timo.be`) || Host(`home.timo.be`) || Host(`homepage.timo.be`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
          sticky:
            cookie:
              secure: true
              httpOnly: true
              sameSite: none
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-tailscale
  namespace: utilities
  annotations:
    # Instead of exposing as a machine, expose it as a Tailscale Service
    tailscale.com/proxy-group: tailscale-services
spec:
  defaultBackend:
    service:
      name: homepage
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
    - hosts:
        - homepage
